# rain_station_data_network_python

./: .gitignore  README.md  environment.yml  llmprompt.txt  pyproject.toml  setup.py
configs/: config.yaml
notebooks/: interim_data_creation1.ipynb  test_file1.ipynb
scripts/: setup_data.py
src/rain_station/: __init__.py
src/rain_station/data/: __init__.py  interim_data_processor.py
src/rain_station/utils/: path_manager.py
