[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rain_station"  # Note: using underscore here
version = "0.1.0"
description = "Rain Station Data Network Analysis"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["rain_station", "rain_station.data"]